Fix Status Bar Obscures Title Bar Bug Only occurs when window is vertically collapsed.

--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,7 @@ html, body {
   height: 3em;
   cursor: auto;
   width: 100%;
+  z-index: 1000;
 }
 
 #PageContent {
